--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="チャットアプリ作りました" />
+    <meta name="description" content="Chat App for Qin Lightning Talk" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -21,16 +21,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <meta property="og:title" content="Shall We Chat?" />
+  <meta property="og:title" content="Qin Lightning Talk" />
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@yokoiwasaki6" />
   <meta name="twitter:creator" content="@yokoiwasaki6" />
-  <meta property="og:url" content="https://shall-we-chat.vercel.app/" />
-  <meta property="og:description" content="チャットアプリ作りました。バックはFirebase、フロントはVercelです。スタイリングも少しだけ" />
-  <meta property="og:image" content="https://shall-we-chat.vercel.app/%PUBLIC_URL%/ogp.jpg" />
-  <meta property="twitter:image" content="https://shall-we-chat.vercel.app/%PUBLIC_URL%/ogp.jpg" />
+  <meta property="og:url" content="https://qin-lt.netlify.app/" />
+  <meta property="og:description" content="Chat App for Qin Lightning Talk。バックはFirebase、フロントはVercelです。スタイリングも少しだけ" />
+  <meta property="og:image" content="https://qin-lt.netlify.app/%PUBLIC_URL%/ogp.jpg" />
+  <meta property="twitter:image" content="https://qin-lt.netlify.app/%PUBLIC_URL%/ogp.jpg" />
 
-    <title>Shall we chat?</title>
+    <title>Qin Lightning Talk</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
