ogp setting updated

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
   <meta name="twitter:site" content="@yokoiwasaki6" />
   <meta name="twitter:creator" content="@yokoiwasaki6" />
   <meta property="og:url" content="https://qin-lt.netlify.app/" />
-  <meta property="og:description" content="Chat App for Qin Lightning Talk。バックはFirebase、フロントはVercelです。スタイリングも少しだけ" />
+  <meta property="og:description" content="Chat App for Qin Lightning Talk" />
   <meta property="og:image" content="https://qin-lt.netlify.app/%PUBLIC_URL%/ogp.jpg" />
   <meta property="twitter:image" content="https://qin-lt.netlify.app/%PUBLIC_URL%/ogp.jpg" />
 
