--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,8 @@
   <meta name="twitter:creator" content="@yokoiwasaki6" />
   <meta property="og:url" content="https://qin-lt.netlify.app/" />
   <meta property="og:description" content="Chat App for Qin Lightning Talk" />
-  <meta property="og:image" content="https://qin-lt.netlify.app/%PUBLIC_URL%/ogp.jpg" />
-  <meta property="twitter:image" content="https://qin-lt.netlify.app/%PUBLIC_URL%/ogp.jpg" />
+  <meta property="og:image" content="https://qin-lt.netlify.app/ogp.jpg" />
+  <meta property="twitter:image" content="https://qin-lt.netlify.app/ogp.jpg" />
 
     <title>Qin Lightning Talk</title>
   </head>
